moved padding from speech bubble to inside child to fix clipping

--- a/sarasa/sarasa1.css
+++ b/sarasa/sarasa1.css
@@ -507,13 +507,18 @@ div > div {
     color: inherit;
 }
 
+.speech-bubble div {
+    word-wrap: break-word;
+    padding: 1rem 1.5rem;
+}
+
 .speech-bubble {
 	position: relative;
 	/* background: var(--dark); */
     /* border-radius: 3rem; */
     text-align: center;
     display: inline-block;
-    padding: 1rem 1.5rem;
+
     /* color: var(--dark); */
     /* margin: 1rem 1.25rem; */
     margin: 5rem 1.25rem 2rem;
@@ -527,7 +532,6 @@ div > div {
     background-color: var(--dark);
     transition: margin .24s ease;
     max-width: calc(100vw - 3rem);
-    word-wrap: break-word;
 }
 
 
